--- a/src/static/materiais.css
+++ b/src/static/materiais.css
@@ -6,6 +6,7 @@
   padding: 30px;
   border-radius: 12px;
   box-shadow: 0 0 18px rgba(0, 0, 0, 0.05);
+  margin-top: 30px;
 }
 
 .materiais-header {
@@ -19,6 +20,35 @@
   margin: 0;
   font-size: 26px;
   color: #333;
+}
+
+.filtro-form {
+  margin-bottom: 20px;
+  display: flex;
+  gap: 10px;
+}
+
+.filtro-form input[type="text"] {
+  padding: 8px;
+  font-size: 14px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  flex: 1;
+}
+
+.filtro-form button {
+  padding: 8px 16px;
+  background-color: #ffa600;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.filtro-form button:hover {
+  background-color: #b36500;
 }
 
 .btn-novo {
