--- a/src/static/movimentacoes.css
+++ b/src/static/movimentacoes.css
@@ -1,10 +1,11 @@
 .movimentacoes-container {
   display: flex;
   flex-direction: column;
-  height: 700px;
+  height: 770px;
   max-width: 1200px;
   width: 100%;
-  margin: 10px auto;
+  margin-left: auto;
+  margin-right: auto;
   padding: 5px 20px;
   background-color: #fdfdfd;
   border: 1px solid #ddd;
