--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -21,7 +21,7 @@
       {% if messages %}
         <div class="flash-messages">
           {% for category, message in messages %}
-            <p class="flash {{ category }}">{{ message }}</p>
+            <p class="flash-message {{ category }}">{{ message }}</p>
           {% endfor %}
         </div>
       {% endif %}
