--- a/src/static/movimentacoes.css
+++ b/src/static/movimentacoes.css
@@ -134,14 +134,26 @@
 }
 
 .table-wrapper {
-  flex: 1;
+  max-height: 500px;
   overflow-y: auto;
   overflow-x: auto;
-  margin: 16px 0;
   border: 1px solid #ddd;
-  border-radius: 6px;
-  -webkit-overflow-scrolling: touch;
+  position: relative;
+  z-index: 0;
 }
+
+.dropdown-acoes {
+  display: none;
+  position: fixed;
+  width: 220px;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 14px;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  z-index: 9999;
+}
+
 
 .movimentacoes-table {
   border-collapse: collapse;
@@ -246,6 +258,7 @@ td {
   width: 100%;
   text-align: center;
   transition: background-color 0.3s ease;
+  height: 33px;
 }
 
 .btn-acao:hover {
@@ -271,19 +284,6 @@ td {
   background-color: #d96a00;
 }
 
-.dropdown-acoes {
-  display: none;
-  position: absolute;
-  top: 110%;
-  right: 0;
-  width: 220px;
-  background-color: #f9f9f9;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 14px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  z-index: 100;
-}
 
 .dropdown-acoes form {
   display: flex;
