--- a/src/static/movimentacoes.css
+++ b/src/static/movimentacoes.css
@@ -6,6 +6,7 @@
   width: 100%;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 20px;
   padding: 5px 20px;
   background-color: #fdfdfd;
   border: 1px solid #ddd;
