--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,10 +6,7 @@
   <title>{% block title %}Valltech - Estoque{% endblock %}</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
-  <link rel="icon" href="{{ url_for('static', filename='assets/favicon.ico') }}" type="image/x-icon">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='assets/favicon-32x32.png') }}">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='assets/favicon-16x16.png') }}">
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='assets/apple-touch-icon.png') }}">
+  <link rel="icon" href="{{ url_for('static', filename='assets/favicon2.png') }}" type="image/x-icon">
   {% block extra_css %}{% endblock %}
 </head>
 <body>
