--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -6,13 +6,14 @@
   <title>Gerenciador de Estoque - Login</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <link rel="icon" href="{{ url_for('static', filename='assets/favicon2.png') }}" type="image/x-icon">
+
 </head>
 
 <body>
   <canvas id="caixas"></canvas>
 
   <div class="login-container">
-    <img src="{{ url_for('static', filename='assets/logo-branca.png') }}" alt="Logo" class="logo">
+    <img src="{{ url_for('static', filename='assets/logo-valltech.png') }}" alt="Logo" class="logo">
 
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
