--- a/src/static/movimentacoes.css
+++ b/src/static/movimentacoes.css
@@ -153,6 +153,8 @@
   padding: 14px;
   box-shadow: 0 4px 6px rgba(0,0,0,0.1);
   z-index: 9999;
+  left: 0;
+  transform: translateX(-100%);
 }
 
 
@@ -174,8 +176,8 @@
 
 .movimentacoes-table th,
 .movimentacoes-table td {
-  padding: 12px 16px;
-  text-align: left;
+  padding: 12px 12px;
+  text-align: center;
   border-bottom: 1px solid #e0e0e0;
 }
 
