--- a/src/templates/editar_movimentacao.html
+++ b/src/templates/editar_movimentacao.html
@@ -57,8 +57,13 @@
 
         <div class="mb-3">
             <label for="motivo" class="form-label">Motivo</label>
-            <input type="text" class="form-control" id="motivo" name="motivo"
-                   value="{{ movimentacao.motivo or '' }}">
+            <select name="motivo" id="motivo" value="{{ movimentacao.motivo or '' }}" class="form-select">
+                <option value="">-- Selecione --</option>
+                <option value="manutenção">Manutenção</option>
+                <option value="preventiva">Preventiva</option>
+                <option value="teste">Teste</option>
+                <option value="instalação">Instalação</option>
+            </select><br>
         </div>
 
         <div class="mb-3">
