--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -13,7 +13,7 @@
   <canvas id="caixas"></canvas>
 
   <div class="login-container">
-    <img src="{{ url_for('static', filename='assets/logo-valltech.png') }}" alt="Logo" class="logo">
+    <img src="{{ url_for('static', filename='assets/logo-branca.png') }}" alt="Logo" class="logo">
 
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
