--- a/src/static/style.css
+++ b/src/static/style.css
@@ -47,7 +47,7 @@ canvas#animated-background {
   border: none;
   border-bottom: 2px solid #ff8c00;
   outline: none;
-  color: black;
+  color: white;
   font-size: 16px;
 }
 
@@ -56,7 +56,7 @@ canvas#animated-background {
   left: 0;
   top: 50%;
   transform: translateY(-50%);
-  color: black;
+  color: rgb(255, 255, 255);
   transition: 0.5s ease;
 }
 
@@ -121,7 +121,7 @@ canvas {
 .login-container {
   position: relative;
   z-index: 10; 
-  background: rgba(255, 255, 255, 0.44);
+  background: rgba(0, 0, 0, 0.74);
   padding: 30px;
   border-radius: 12px;
   box-shadow: 0 8px 20px rgb(255, 115, 0);
